small updates and changes

--- a/styles/scss/partials/_primary.scss
+++ b/styles/scss/partials/_primary.scss
@@ -9,9 +9,9 @@
 .ucf {
     background-image: url(../images/ucflogo.png);
     background-repeat: no-repeat;
-    //background-size: 310px;
+    background-size: 310px;
     margin-top: 13px;
-    width: 250px;
+    width: 320px;
     height: 25px;
     text-indent: -999px;
     z-index: 100;
