--- a/styles/site.css
+++ b/styles/site.css
@@ -10197,8 +10197,9 @@ button.close {
 .ucf {
   background-image: url(../images/ucflogo.png);
   background-repeat: no-repeat;
+  background-size: 310px;
   margin-top: 13px;
-  width: 250px;
+  width: 320px;
   height: 25px;
   text-indent: -999px;
   z-index: 100;
