--- a/scss/modules/fullpage/_base.scss
+++ b/scss/modules/fullpage/_base.scss
@@ -51,7 +51,7 @@
     float: left;
     position: relative;
 }
-/*.fp-controlArrow {
+.fp-controlArrow {
     position: absolute;
     z-index: 4;
     top: 50%;
@@ -64,14 +64,14 @@
 .fp-controlArrow.fp-prev {
     left: 15px;
     width: 0;
-    border-width: 38.5px 34px 38.5px 0;
-    border-color: transparent #fff transparent transparent;
+    //border-width: 38.5px 34px 38.5px 0;
+    //border-color: transparent #fff transparent transparent;
 }
 .fp-controlArrow.fp-next {
     right: 15px;
-    border-width: 38.5px 0 38.5px 34px;
-    border-color: transparent transparent transparent #fff;
-}*/
+    //border-width: 38.5px 0 38.5px 34px;
+    //border-color: transparent transparent transparent #fff;
+}
 .fp-scrollable {
     overflow: scroll;
 }
