--- a/scss/partials/_nav.scss
+++ b/scss/partials/_nav.scss
@@ -6,7 +6,7 @@
 .navbar {
     background-color: transparent;
     background: rgba(255, 255, 255, 0.96);
-    box-shadow: 0 2px 12px #555;
+    box-shadow: 0 2px 12px rgba(150, 150, 150, 0.7);
 }
 
 
