--- a/scss/modules/fullpage/_base.scss
+++ b/scss/modules/fullpage/_base.scss
@@ -132,7 +132,7 @@
 }
 #fp-nav li .active span,
 .fp-slidesNav .active span {
-    background: #333;
+    background: #cc9900;
 }
 #fp-nav span,
 .fp-slidesNav span {
@@ -140,7 +140,7 @@
     left: 2px;
     width: 8px;
     height: 8px;
-    border: 1px solid #000;
+    border: 1px solid #333;
     background: rgba(0, 0, 0, 0);
     border-radius: 50%;
     position: absolute;
