--- a/scss/partials/_global.scss
+++ b/scss/partials/_global.scss
@@ -36,7 +36,9 @@ html {
 body {
     @extend html;
     
-    //padding-top: 50px;
+    //background-image: url(../images/);
+    //font-family: 'Rock Salt', sans-serif;
+    //color: #fff;
     
     /*Avoid flicker on slides transitions for mobile phones #336 */
     -webkit-tap-highlight-color: rgba(0,0,0,0);
@@ -49,6 +51,15 @@ body {
         line-height: 1em;
         color: #cc9900;
     }
+}
+
+
+/*
+ * Page
+ */
+
+h1.head-title {
+    font-size: 4em;   
 }
 
 
